--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,8 @@ dependencies:
   toastification: ^3.0.3
   pull_to_refresh: ^2.0.0
   firebase_messaging: ^16.0.0
-  flutter_local_notifications: ^19.4.1
   firebase_core: ^4.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -92,12 +92,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Mulish
+      fonts:
+        - asset: assets/fonts/Mulish.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
