--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,12 +52,15 @@ dependencies:
   firebase_messaging: ^16.0.0
   firebase_core: ^4.0.0
   shimmer: ^3.0.0
+  fl_chart: ^0.71.0
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
+
+  # The "flutter_lints" package below contains a set of rfecommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
