--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera.camera"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:label="hub_dom"
         android:name="${applicationName}"
