--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   shimmer: ^3.0.0
   fl_chart: ^0.71.0
   image_picker: ^1.2.0
+  mobile_scanner: ^7.0.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
