--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   image_picker: ^1.2.0
   mobile_scanner: ^7.0.1
   equatable: ^2.0.7
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
